[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/characters/player/SpearPlayer.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/State.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/Vision.gd" type="Script" id=3]
[ext_resource path="res://resources/sprites/maximus_sheet.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.0
height = 24.0

[sub_resource type="Animation" id=13]
resource_name = "AttackDown"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleDown"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleTop"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "MoveDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "MoveTop"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "RollDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "RollFade"
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_fade"
}, {
"args": [  ],
"method": "spawn_fade"
}, {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "RollTop"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 15
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -4, 17, 1, 17, 7, 14, 5, 10, 0, 9, -4, 12 )

[node name="MoveTween" type="Tween" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="RollCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -1 )
shape = SubResource( 5 )

[node name="ShootPointRight" type="Position2D" parent="."]
position = Vector2( 23, -4 )

[node name="ShootPointLeft" type="Position2D" parent="."]
position = Vector2( -22, -4 )

[node name="Vision" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 62, 0 )
width = 3.0
default_color = Color( 0.94902, 0.439216, 0.592157, 1 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/AttackDown = SubResource( 13 )
anims/IdleDown = SubResource( 6 )
anims/IdleTop = SubResource( 7 )
anims/MoveDown = SubResource( 8 )
anims/MoveTop = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/RollDown = SubResource( 11 )
anims/RollFade = SubResource( 14 )
anims/RollTop = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
hframes = 6
vframes = 4
region_rect = Rect2( 462.09, 290.343, 21.766, 81.6224 )

[node name="State" type="Label" parent="."]
margin_left = -21.0
margin_top = -37.0
margin_right = 19.0
margin_bottom = -23.0
text = "State"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
